--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "express": "^4.18.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
