--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@types/video.js": "^7.3.58",
     "express": "^4.18.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "video.js": "^8.12.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
